--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-   <h1> <%= 2+2 %></h1>
-   <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-    <script src="/javascripts/script.js"></script>
+    <div class="main w-full min-h-screen bg-zinc-900">
+        <div class="form p-10">
+            <form action="/create" method="post">
+                <input class="block w-1/4 rounded-md px-5 py-2 bg-zinc-800 outline-none text-white" type="text"
+                    placeholder="Title goes here.." name="title" />
+                <textarea class="block w-1/4 rounded-md px-5 py-2 bg-zinc-800 resize-none mt-2 outline-none text-white"
+                    placeholder="Write task details here..." name="details"></textarea>
+                <input class="mt-2 bg-blue-600 px-5 py-2 rounded-md text-white" type="submit" value="Create Task" />
+            </form>
+        </div>
+        <div class="tasks flex gap-3 flex-wrap p-10">
+            <% if (files && files.length > 0) { %>
+                <% files.forEach(function(val) { %>
+                    <div class="task w-1/4 px-3 py-4 rounded-md bg-zinc-800">
+                        <h1 class="text-white text-2xl tracking-tighter"><%= val %></h1>
+                       <div class="flex justify-between items-center mt-5">
+                        <a class="text-blue-500 inline-block text-sm" href="/file/<%= val %>">Read More</a>
+                        <a class="text-zinc-400" href="/edit/<%= val %>">edit file name</a>
+                       </div>
+                    </div>
+                <% }) %>
+            <% } else { %>
+                <h3 class="text-zinc-600">No Tasks Yet.</h3>
+            <% } %>
+        </div>
+    </div>
 </body>
 </html>
