--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,12 @@
 
 <body>
   <div class="w-full h-screen text-white p-10">
-    <h1 class="text-3xl tracking-tighter mb-3">Create User</h1>
+    <h1 class="text-3xl tracking-tighter">Create User</h1>
     <form action="/create" method="post">
       <label for="username" class="sr-only">Username</label>
       <input
         id="username"
-        class="px-5 py-2 border-2 border-zinc-800 outline-none rounded-lg bg-transparent"
+        class="px-5 py-2 border-2 border-zinc-700 outline-none rounded-lg bg-transparent"
         type="text"
         name="username"
         placeholder="Username"
